# cspark-cicd-lesson

./: .coverage  README.md
.github/workflows/: helloworld.yaml  python-ci.yaml
junit/: test-results.xml
my_package/: README.md  pyproject.toml
my_package/simons/: app.py
my_package/test/: test_add.py
