[tool.poetry]
name = 'simons'
version = "0.1.0"
description = "make practical package"
authors = ["Simon Scott simon.scott20@ntlworld.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]

pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


